SASS - Definition list alignment fix

--- a/app/assets/stylesheets/components/_info-block.scss
+++ b/app/assets/stylesheets/components/_info-block.scss
@@ -1,6 +1,6 @@
 .info-blk {
     & > dl {
-        & > dt,& > dd {
+        & > dt, & > dd {
             display: inline;
         }
         & > dt {
@@ -10,6 +10,9 @@
               content: ':';
               padding: 0 $base-spacing-unit-tiny;
           }
+        }
+        & > dd > p {
+            display: inline;
         }
     }
 }
